# aitk

./: README.md  pyproject.toml
aitk/: __init__.py  __main__.py  cli.py  config.py  dependencies.py  main.py  utils.py
aitk/tests/: test_aitk.py  test_api.py  test_cli.py
